--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                 </div>
             </div>
         </div>
+
         <div class="col-lg-4">
             <div class="dashboard-card">
                 <h6 class="mb-4 fw-bold label-text">Team Progress</h6>
@@ -98,6 +99,51 @@
                 </div>
             </div>
         </div>
+
+        <div class="col-12 mt-4">
+            <div class="dashboard-card">
+                <h6 class="mb-4 fw-bold label-text">Income Overview</h6>
+                <div class="row g-3">
+                    <div class="col-md-4 col-sm-6">
+                        <div class="summary-item">
+                            <div><h5 class="mb-0 fw-bold text-white">$ 450</h5><small class="label-text">Direct Income</small></div>
+                            <div class="summary-icon-box" style="color: var(--neon-green);"><i class="fas fa-user-plus"></i></div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                        <div class="summary-item">
+                            <div><h5 class="mb-0 fw-bold text-white">$ 1,200</h5><small class="label-text">Level Income</small></div>
+                            <div class="summary-icon-box" style="color: var(--accent-blue);"><i class="fas fa-layer-group"></i></div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                        <div class="summary-item">
+                            <div><h5 class="mb-0 fw-bold text-white">$ 850</h5><small class="label-text">Matching Income</small></div>
+                            <div class="summary-icon-box" style="color: var(--neon-pink);"><i class="fas fa-users-rectangle"></i></div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                        <div class="summary-item">
+                            <div><h5 class="mb-0 fw-bold text-white">$ 320</h5><small class="label-text">Sponsor Matching</small></div>
+                            <div class="summary-icon-box" style="color: var(--neon-gold);"><i class="fas fa-handshake"></i></div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                        <div class="summary-item">
+                            <div><h5 class="mb-0 fw-bold text-white">$ 1,000</h5><small class="label-text">Reward Income</small></div>
+                            <div class="summary-icon-box" style="color: #ff4757;"><i class="fas fa-gift"></i></div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                        <div class="summary-item">
+                            <div><h5 class="mb-0 fw-bold text-white">$ 140</h5><small class="label-text">ROI Income</small></div>
+                            <div class="summary-icon-box" style="color: #2ed573;"><i class="fas fa-chart-pie"></i></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 </div>
 
@@ -111,11 +157,9 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <script>
-    // Header Load
     fetch('header.html').then(res => res.text()).then(data => {
         document.getElementById('sidebar').innerHTML = data;
     });
-    // Footer/Modal Load
     fetch('footer.html').then(res => res.text()).then(data => {
         document.getElementById('footer-load').innerHTML = data;
     });
