--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="row align-items-center">
                     <div class="col-md-8">
                         <small class="text-info"><i class="fas fa-sparkles"></i> Welcome back</small>
-                        <h2 class="fw-bold text-white mb-3">vnsdjvxlcj</h2>
+                        <h2 class="fw-bold text-white mb-3">Anil kumar</h2>
                         <div class="row g-3">
                             <div class="col-sm-6"><p class="mb-1 small label-text"><i class="fas fa-id-badge"></i> User ID</p><p class="fw-bold mb-0">EXA872435</p></div>
                             <div class="col-sm-6"><p class="mb-1 small label-text"><i class="fas fa-check-circle"></i> Status</p><span class="status-pill">ACTIVE</span></div>
@@ -167,3 +167,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
