--- a/header.html
+++ b/header.html
@@ -3,20 +3,23 @@
     <span>EXA COIN<br><small style="font-size: 10px; color: var(--accent-blue);">Int. Mind Power LLP</small></span>
 </div>
 <div class="nav flex-column mt-2">
-    <a href="#" class="nav-link active"><i class="fas fa-home"></i> Dashboard</a>
+    <a href="index.html" class="nav-link" id="nav-dashboard"><i class="fas fa-home"></i> Dashboard</a>
+    
     <a href="#" class="nav-link text-warning fw-bold" data-bs-toggle="modal" data-bs-target="#buyExaModal">
         <i class="fas fa-shopping-cart"></i> Buy EXA Coin
     </a>
+
     <div class="has-submenu" id="accountMenu">
         <a class="nav-link" onclick="toggleSubmenu('accountMenu')">
             <i class="fas fa-user-circle"></i> My Account <i class="fas fa-chevron-right"></i>
         </a>
         <div class="submenu">
-            <a href="#" class="nav-link"><i class="fas fa-user-edit"></i> Profile</a>
+            <a href="profile.html" class="nav-link" id="nav-profile"><i class="fas fa-user-edit"></i> Profile</a>
             <a href="#" class="nav-link"><i class="fas fa-wallet"></i> Wallet Address</a>
             <a href="#" class="nav-link"><i class="fas fa-lock"></i> Password</a>
         </div>
     </div>
+
     <a href="#" class="nav-link"><i class="fas fa-check-circle"></i> Activation</a>
     <a href="#" class="nav-link"><i class="fas fa-arrow-circle-up"></i> Upgrade</a>
     <a href="#" class="nav-link"><i class="fas fa-sitemap"></i> My Genealogy</a>
