--- a/header.html
+++ b/header.html
@@ -3,7 +3,9 @@
     <span>EXA COIN<br><small style="font-size: 10px; color: var(--accent-blue);">Int. Mind Power LLP</small></span>
 </div>
 <div class="nav flex-column mt-2">
-    <a href="index.html" class="nav-link" id="nav-dashboard"><i class="fas fa-home"></i> Dashboard</a>
+    <a href="index.html" class="nav-link" id="nav-dashboard">
+        <i class="fas fa-home"></i> Dashboard
+    </a>
     
     <a href="#" class="nav-link text-warning fw-bold" data-bs-toggle="modal" data-bs-target="#buyExaModal">
         <i class="fas fa-shopping-cart"></i> Buy EXA Coin
@@ -20,8 +22,8 @@
         </div>
     </div>
 
-    <a href="#" class="nav-link"><i class="fas fa-check-circle"></i> Activation</a>
-    <a href="#" class="nav-link"><i class="fas fa-arrow-circle-up"></i> Upgrade</a>
+    <a href="activation.html" class="nav-link" id="nav-activation"><i class="fas fa-check-circle"></i> Activation</a>
+    <a href="upgrade.html" class="nav-link" id="nav-upgrade"><i class="fas fa-arrow-circle-up"></i> Upgrade</a>
     <a href="#" class="nav-link"><i class="fas fa-sitemap"></i> My Genealogy</a>
     
     <div class="has-submenu" id="fundMenu">
@@ -29,10 +31,10 @@
             <i class="fas fa-wallet"></i> Fund Wallet <i class="fas fa-chevron-right"></i>
         </a>
         <div class="submenu">
-            <a href="#" class="nav-link"><i class="fas fa-plus-circle"></i> Add Fund</a>
-            <a href="#" class="nav-link"><i class="fas fa-history"></i> Add Fund History</a>
-            <a href="#" class="nav-link"><i class="fas fa-exchange-alt"></i> P2P Transfer</a>
-            <a href="#" class="nav-link"><i class="fas fa-receipt"></i> P2P History</a>
+            <a href="add-fund.html" class="nav-link" id="nav-add-fund"><i class="fas fa-plus-circle"></i> Add Fund</a>
+            <a href="fund-history.html" class="nav-link" id="nav-fund-history"><i class="fas fa-history"></i> Add Fund History</a>
+            <a href="p2p-transfer.html" class="nav-link" id="nav-p2p"><i class="fas fa-exchange-alt"></i> P2P Transfer</a>
+            <a href="p2p-history.html" class="nav-link" id="nav-p2p-history"><i class="fas fa-receipt"></i> P2P History</a>
         </div>
     </div>
 
@@ -41,12 +43,12 @@
             <i class="fas fa-money-bill-wave"></i> Withdrawal <i class="fas fa-chevron-right"></i>
         </a>
         <div class="submenu">
-            <a href="#" class="nav-link"><i class="fas fa-hand-holding-usd"></i> Withdraw Now</a>
-            <a href="#" class="nav-link"><i class="fas fa-list-ul"></i> Withdraw History</a>
+            <a href="withdrawal.html" class="nav-link" id="nav-withdrawal"><i class="fas fa-hand-holding-usd"></i> Withdraw Now</a>
+            <a href="withdrawal-history.html" class="nav-link" id="nav-withdrawal-history"><i class="fas fa-list-ul"></i> Withdraw History</a>
         </div>
     </div>
 
-    <a href="#" class="nav-link"><i class="fas fa-file-alt"></i> Payout Reports</a>
+    <a href="payout-report.html" class="nav-link" id="nav-payout"><i class="fas fa-file-alt"></i> Payout Reports</a>
     <a href="#" class="nav-link"><i class="fas fa-headset"></i> Support</a>
-    <a href="#" class="nav-link"><i class="fas fa-sign-out-alt"></i> Logout</a>
+    <a href="#" class="nav-link text-danger"><i class="fas fa-sign-out-alt"></i> Logout</a>
 </div>
