--- a/payout-report.html
+++ b/payout-report.html
@@ -19,100 +19,126 @@
             <button class="menu-toggle me-3" id="toggleBtn"><i class="fas fa-bars"></i></button>
             <h5 class="mb-0 fw-bold text-gradient">Payout Reports</h5>
         </div>
-        <div class="text-end">
-            <div class="small label-text">Total Earning</div>
-            <div class="fw-bold text-success">$ 8,240.00</div>
+        <div class="text-end bg-dark px-3 py-2 rounded-4 border border-secondary shadow-sm">
+            <div class="card-label" style="font-size: 8px;">Total Earning</div>
+            <div class="fw-bold text-success" style="font-size: 1.1rem;">$ 8,240.00</div>
         </div>
     </div>
 
     <div class="dashboard-card profile-card p-3 mb-4">
         <div class="row g-2 align-items-center">
-            <div class="col-md-3">
-                <select class="form-control form-control-custom form-select small">
+            <div class="col-6 col-md-4">
+                <select class="form-control form-control-custom form-select small py-2">
                     <option selected>All Incomes</option>
                     <option>Level Income</option>
                     <option>Direct Income</option>
                     <option>ROI Income</option>
                 </select>
             </div>
-            <div class="col-md-3">
-                <input type="date" class="form-control form-control-custom small">
+            <div class="col-6 col-md-4">
+                <input type="date" class="form-control form-control-custom small py-2">
             </div>
-            <div class="col-md-2">
-                <button class="btn btn-primary w-100 btn-sm rounded-pill">Filter</button>
+            <div class="col-12 col-md-4">
+                <button class="btn btn-primary w-100 rounded-pill fw-bold">Apply Filter</button>
             </div>
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-12">
-            <div class="dashboard-card profile-card p-4">
-                <div class="table-responsive">
-                    <table class="table table-custom">
-                        <thead>
-                            <tr>
-                                <th>Date & Time</th>
-                                <th>User From</th>
-                                <th>Level</th>
-                                <th>Income Type</th>
-                                <th>Amount</th>
-                                <th>Status</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>17 Feb 2026 <br> <small class="text-muted">02:30 PM</small></td>
-                                <td>
-                                    <div class="d-flex align-items-center">
-                                        <div class="exa-coin-icon" style="width: 30px; height: 30px; font-size: 10px;">R</div>
-                                        <div class="ms-2">
-                                            <span class="fw-bold">EXA445522</span><br>
-                                            <small class="text-muted">Rahul S.</small>
-                                        </div>
-                                    </div>
-                                </td>
-                                <td><span class="badge bg-dark border border-secondary px-2">Level 2</span></td>
-                                <td class="small">Level Matching</td>
-                                <td class="text-success fw-bold">+ $ 25.00</td>
-                                <td><span class="status-badge bg-approved">CREDITED</span></td>
-                            </tr>
-                            
-                            <tr>
-                                <td>16 Feb 2026 <br> <small class="text-muted">11:15 AM</small></td>
-                                <td>
-                                    <div class="d-flex align-items-center">
-                                        <div class="exa-coin-icon" style="width: 30px; height: 30px; font-size: 10px;">A</div>
-                                        <div class="ms-2">
-                                            <span class="fw-bold">EXA110099</span><br>
-                                            <small class="text-muted">Amit Varma</small>
-                                        </div>
-                                    </div>
-                                </td>
-                                <td><span class="badge bg-dark border border-secondary px-2">Direct</span></td>
-                                <td class="small">Direct Referral</td>
-                                <td class="text-success fw-bold">+ $ 100.00</td>
-                                <td><span class="status-badge bg-approved">CREDITED</span></td>
-                            </tr>
-
-                            <tr>
-                                <td>15 Feb 2026 <br> <small class="text-muted">09:00 AM</small></td>
-                                <td>
-                                    <div class="d-flex align-items-center">
-                                        <div class="exa-coin-icon" style="width: 30px; height: 30px; font-size: 10px;">S</div>
-                                        <div class="ms-2">
-                                            <span class="fw-bold">EXA778833</span><br>
-                                            <small class="text-muted">Suresh K.</small>
-                                        </div>
-                                    </div>
-                                </td>
-                                <td><span class="badge bg-dark border border-secondary px-2">Level 5</span></td>
-                                <td class="small">Level Bonus</td>
-                                <td class="text-success fw-bold">+ $ 10.50</td>
-                                <td><span class="status-badge bg-approved">CREDITED</span></td>
-                            </tr>
-                        </tbody>
-                    </table>
+    <div class="mobile-report-view">
+        <div class="report-card">
+            <div class="card-row">
+                <div>
+                    <div class="card-label">User From</div>
+                    <div class="card-value d-flex align-items-center">
+                        <div class="exa-coin-icon" style="width: 25px; height: 25px; font-size: 10px; margin-right: 8px;">R</div>
+                        EXA445522 <small class="text-muted ms-1">(Rahul S.)</small>
+                    </div>
                 </div>
+                <div class="income-amt">+$25.00</div>
+            </div>
+            <div class="card-row mt-3">
+                <div>
+                    <span class="mini-badge">LEVEL 2</span>
+                    <span class="ms-2 text-muted" style="font-size: 11px;">17 Feb, 02:30 PM</span>
+                </div>
+                <div class="card-value text-info small fw-bold">Level Matching</div>
+            </div>
+        </div>
+
+        <div class="report-card" style="border-left-color: var(--neon-pink);">
+            <div class="card-row">
+                <div>
+                    <div class="card-label">User From</div>
+                    <div class="card-value d-flex align-items-center">
+                        <div class="exa-coin-icon" style="width: 25px; height: 25px; font-size: 10px; margin-right: 8px;">A</div>
+                        EXA110099 <small class="text-muted ms-1">(Amit Varma)</small>
+                    </div>
+                </div>
+                <div class="income-amt">+$100.00</div>
+            </div>
+            <div class="card-row mt-3">
+                <div>
+                    <span class="mini-badge" style="color: var(--neon-pink); border-color: var(--neon-pink);">DIRECT</span>
+                    <span class="ms-2 text-muted" style="font-size: 11px;">16 Feb, 11:15 AM</span>
+                </div>
+                <div class="card-value text-info small fw-bold">Direct Referral</div>
+            </div>
+        </div>
+
+        <div class="report-card" style="border-left-color: var(--neon-gold);">
+            <div class="card-row">
+                <div>
+                    <div class="card-label">User From</div>
+                    <div class="card-value d-flex align-items-center">
+                        <div class="exa-coin-icon" style="width: 25px; height: 25px; font-size: 10px; margin-right: 8px;">S</div>
+                        EXA778833 <small class="text-muted ms-1">(Suresh K.)</small>
+                    </div>
+                </div>
+                <div class="income-amt">+$10.50</div>
+            </div>
+            <div class="card-row mt-3">
+                <div>
+                    <span class="mini-badge" style="color: var(--neon-gold); border-color: var(--neon-gold);">LEVEL 5</span>
+                    <span class="ms-2 text-muted" style="font-size: 11px;">15 Feb, 09:00 AM</span>
+                </div>
+                <div class="card-value text-info small fw-bold">Level Bonus</div>
+            </div>
+        </div>
+    </div>
+
+    <div class="desktop-report-view">
+        <div class="dashboard-card profile-card p-4">
+            <div class="table-responsive">
+                <table class="table table-custom align-middle">
+                    <thead>
+                        <tr>
+                            <th>Date & Time</th>
+                            <th>User From</th>
+                            <th>Level</th>
+                            <th>Income Type</th>
+                            <th>Amount</th>
+                            <th>Status</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>17 Feb 2026 <br> <small class="text-muted">02:30 PM</small></td>
+                            <td>
+                                <div class="d-flex align-items-center">
+                                    <div class="exa-coin-icon" style="width: 30px; height: 30px; font-size: 10px;">R</div>
+                                    <div class="ms-2">
+                                        <span class="fw-bold">EXA445522</span><br>
+                                        <small class="text-muted">Rahul S.</small>
+                                    </div>
+                                </div>
+                            </td>
+                            <td><span class="badge bg-dark border border-secondary px-2">Level 2</span></td>
+                            <td class="small">Level Matching</td>
+                            <td class="text-success fw-bold">+ $ 25.00</td>
+                            <td><span class="status-badge bg-approved">CREDITED</span></td>
+                        </tr>
+                        </tbody>
+                </table>
             </div>
         </div>
     </div>
@@ -120,11 +146,10 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script>
-    // Header Load logic
     fetch('header.html').then(res => res.text()).then(data => {
         document.getElementById('sidebar').innerHTML = data;
         setTimeout(() => {
-            const rptLink = document.getElementById('nav-payoutreport');
+            const rptLink = document.getElementById('nav-payout');
             if(rptLink) rptLink.classList.add('active');
         }, 100);
     });
